
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_3__ ;
typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


typedef int lpServices ;
struct TYPE_7__ {int dwCurrentState; } ;
struct TYPE_9__ {char* lpServiceName; char* lpDisplayName; TYPE_1__ ServiceStatusProcess; } ;
struct TYPE_8__ {char* lpBinaryPathName; } ;
typedef int * SC_HANDLE ;
typedef TYPE_2__* LPQUERY_SERVICE_CONFIG ;
typedef TYPE_3__* LPENUM_SERVICE_STATUS_PROCESS ;
typedef int LPBYTE ;
typedef unsigned int DWORD ;


 int CloseServiceHandle (int *) ;
 scalar_t__ EnumServicesStatusEx (int *,int ,unsigned int,int ,int ,int,unsigned int*,unsigned int*,unsigned int*,int *) ;
 int GENERIC_READ ;
 int GetLastError () ;
 char* GetOwner (char*) ;
 int LPTR ;
 scalar_t__ LocalAlloc (int ,int) ;
 int LocalFree (TYPE_3__*) ;
 int * OpenSCManager (char*,int *,int) ;
 int * OpenService (int *,char*,int) ;
 scalar_t__ QueryServiceConfig (int *,TYPE_2__*,int,unsigned int*) ;
 int RemoteHost ;
 int SC_ENUM_PROCESS_INFO ;
 int SC_MANAGER_ENUMERATE_SERVICE ;
 int SERVICE_CHANGE_CONFIG ;
 unsigned int SERVICE_DRIVER ;
 int SERVICE_STATE_ALL ;
 unsigned int SERVICE_WIN32 ;
 int TRUE ;
 int WNetCancelConnection2 (int ,int *,int ) ;
 int doFormatMessage (int ) ;
 int exit (int) ;
 int memset (TYPE_3__*,char,int) ;
 int printf (char*,...) ;

void ListVulnerableService(char *host) {
 SC_HANDLE SCM;
 SC_HANDLE Svc;
 DWORD nResumeHandle;
 DWORD dwServiceType;
 LPENUM_SERVICE_STATUS_PROCESS lpServices;
 DWORD nSize = 0;
 DWORD nServicesReturned;
 unsigned int n;
 unsigned int l=0;
 DWORD dwByteNeeded;
 LPQUERY_SERVICE_CONFIG lpConfig;
 char *p;

    SCM = OpenSCManager(host,((void*)0),SC_MANAGER_ENUMERATE_SERVICE);
    if (!SCM){
        printf("[-] OpenScManager() FAILED\n");
        doFormatMessage(GetLastError());
        exit(-1);
    }
    nResumeHandle = 0;
    dwServiceType = SERVICE_WIN32 | SERVICE_DRIVER;
    lpServices = (LPENUM_SERVICE_STATUS_PROCESS) LocalAlloc(LPTR, 65535);
    if (!lpServices) {
        printf("[-] CRITICAL ERROR: LocalAlloc() Failed\n");
        exit(-1);
    }
    memset(lpServices,'\0',sizeof(lpServices));
    if (EnumServicesStatusEx(SCM, SC_ENUM_PROCESS_INFO,
        dwServiceType, SERVICE_STATE_ALL,
        (LPBYTE)lpServices, 65535,
        &nSize, &nServicesReturned,
        &nResumeHandle, ((void*)0)) == 0)
    {
        printf("EnumServicesStatusEx FAILED\n");
        exit(-1);
    }

    printf("[+] Listing Vulnerable Services...\n");
    for (n = 0; n < nServicesReturned; n++) {
        Svc = OpenService(SCM,lpServices[n].lpServiceName, SERVICE_CHANGE_CONFIG | SC_MANAGER_ENUMERATE_SERVICE |GENERIC_READ);
        if (Svc!=((void*)0)) {
            l++;
            printf("\n    [%s]\t\t%s\n",lpServices[n].lpServiceName, lpServices[n].lpDisplayName);
            printf("    Status: 0x%x\n",lpServices[n].ServiceStatusProcess.dwCurrentState);
            if (!host) {
                p=GetOwner(lpServices[n].lpServiceName);
                if (p) {
                    printf("    Context:\t\t%s\n",p);
                }
            }
      dwByteNeeded = 0;
      lpConfig = (LPQUERY_SERVICE_CONFIG) LocalAlloc(LPTR, 1024*8);
      if (QueryServiceConfig(Svc, lpConfig, 1024*8, &dwByteNeeded)!=0) {
                printf("    Parameter:\t\t%s\n",lpConfig->lpBinaryPathName);
            }else {
                doFormatMessage(GetLastError());
            }
        }
    }
    printf("\n[+] Analyzed %i Services in your system\n",nServicesReturned);
    if (l>0) {
        printf("[+] You were Lucky. %i vulnerable services found\n",l);
    } else {
        printf("[+] Your system is secure! Great! :/\n");
    }
     if (host) WNetCancelConnection2(RemoteHost,((void*)0),TRUE);
    CloseServiceHandle(SCM);
    LocalFree(lpServices);
    exit(1);
}
