; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_1465.c_ListVulnerableService.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_1465.c_ListVulnerableService.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i8*, i8*, %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i8* }

@SC_MANAGER_ENUMERATE_SERVICE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"[-] OpenScManager() FAILED\0A\00", align 1
@SERVICE_WIN32 = common dso_local global i32 0, align 4
@SERVICE_DRIVER = common dso_local global i32 0, align 4
@LPTR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [41 x i8] c"[-] CRITICAL ERROR: LocalAlloc() Failed\0A\00", align 1
@SC_ENUM_PROCESS_INFO = common dso_local global i32 0, align 4
@SERVICE_STATE_ALL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [29 x i8] c"EnumServicesStatusEx FAILED\0A\00", align 1
@.str.3 = private unnamed_addr constant [36 x i8] c"[+] Listing Vulnerable Services...\0A\00", align 1
@SERVICE_CHANGE_CONFIG = common dso_local global i32 0, align 4
@GENERIC_READ = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [15 x i8] c"\0A    [%s]\09\09%s\0A\00", align 1
@.str.5 = private unnamed_addr constant [18 x i8] c"    Status: 0x%x\0A\00", align 1
@.str.6 = private unnamed_addr constant [18 x i8] c"    Context:\09\09%s\0A\00", align 1
@.str.7 = private unnamed_addr constant [20 x i8] c"    Parameter:\09\09%s\0A\00", align 1
@.str.8 = private unnamed_addr constant [42 x i8] c"\0A[+] Analyzed %i Services in your system\0A\00", align 1
@.str.9 = private unnamed_addr constant [50 x i8] c"[+] You were Lucky. %i vulnerable services found\0A\00", align 1
@.str.10 = private unnamed_addr constant [38 x i8] c"[+] Your system is secure! Great! :/\0A\00", align 1
@RemoteHost = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ListVulnerableService(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_8__*, align 8
  %14 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %8, align 4
  store i32 0, i32* %11, align 4
  %15 = load i8*, i8** %2, align 8
  %16 = load i32, i32* @SC_MANAGER_ENUMERATE_SERVICE, align 4
  %17 = call i32* @OpenSCManager(i8* %15, i32* null, i32 %16)
  store i32* %17, i32** %3, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %25, label %20

20:                                               ; preds = %1
  %21 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %22 = call i32 (...) @GetLastError()
  %23 = call i32 @doFormatMessage(i32 %22)
  %24 = call i32 @exit(i32 -1) #3
  unreachable

25:                                               ; preds = %1
  store i32 0, i32* %5, align 4
  %26 = load i32, i32* @SERVICE_WIN32, align 4
  %27 = load i32, i32* @SERVICE_DRIVER, align 4
  %28 = or i32 %26, %27
  store i32 %28, i32* %6, align 4
  %29 = load i32, i32* @LPTR, align 4
  %30 = call i64 @LocalAlloc(i32 %29, i32 65535)
  %31 = inttoptr i64 %30 to %struct.TYPE_9__*
  store %struct.TYPE_9__* %31, %struct.TYPE_9__** %7, align 8
  %32 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %33 = icmp ne %struct.TYPE_9__* %32, null
  br i1 %33, label %37, label %34

34:                                               ; preds = %25
  %35 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0))
  %36 = call i32 @exit(i32 -1) #3
  unreachable

37:                                               ; preds = %25
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %39 = call i32 @memset(%struct.TYPE_9__* %38, i8 signext 0, i32 8)
  %40 = load i32*, i32** %3, align 8
  %41 = load i32, i32* @SC_ENUM_PROCESS_INFO, align 4
  %42 = load i32, i32* %6, align 4
  %43 = load i32, i32* @SERVICE_STATE_ALL, align 4
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %45 = ptrtoint %struct.TYPE_9__* %44 to i32
  %46 = call i64 @EnumServicesStatusEx(i32* %40, i32 %41, i32 %42, i32 %43, i32 %45, i32 65535, i32* %8, i32* %9, i32* %5, i32* null)
  %47 = icmp eq i64 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %37
  %49 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0))
  %50 = call i32 @exit(i32 -1) #3
  unreachable

51:                                               ; preds = %37
  %52 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %10, align 4
  br label %53

53:                                               ; preds = %131, %51
  %54 = load i32, i32* %10, align 4
  %55 = load i32, i32* %9, align 4
  %56 = icmp ult i32 %54, %55
  br i1 %56, label %57, label %134

57:                                               ; preds = %53
  %58 = load i32*, i32** %3, align 8
  %59 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %60 = load i32, i32* %10, align 4
  %61 = zext i32 %60 to i64
  %62 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %59, i64 %61
  %63 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %62, i32 0, i32 0
  %64 = load i8*, i8** %63, align 8
  %65 = load i32, i32* @SERVICE_CHANGE_CONFIG, align 4
  %66 = load i32, i32* @SC_MANAGER_ENUMERATE_SERVICE, align 4
  %67 = or i32 %65, %66
  %68 = load i32, i32* @GENERIC_READ, align 4
  %69 = or i32 %67, %68
  %70 = call i32* @OpenService(i32* %58, i8* %64, i32 %69)
  store i32* %70, i32** %4, align 8
  %71 = load i32*, i32** %4, align 8
  %72 = icmp ne i32* %71, null
  br i1 %72, label %73, label %130

73:                                               ; preds = %57
  %74 = load i32, i32* %11, align 4
  %75 = add i32 %74, 1
  store i32 %75, i32* %11, align 4
  %76 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %77 = load i32, i32* %10, align 4
  %78 = zext i32 %77 to i64
  %79 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %76, i64 %78
  %80 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %79, i32 0, i32 0
  %81 = load i8*, i8** %80, align 8
  %82 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %83 = load i32, i32* %10, align 4
  %84 = zext i32 %83 to i64
  %85 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %82, i64 %84
  %86 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %85, i32 0, i32 1
  %87 = load i8*, i8** %86, align 8
  %88 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i8* %81, i8* %87)
  %89 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %90 = load i32, i32* %10, align 4
  %91 = zext i32 %90 to i64
  %92 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %89, i64 %91
  %93 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %92, i32 0, i32 2
  %94 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %93, i32 0, i32 0
  %95 = load i32, i32* %94, align 8
  %96 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.5, i64 0, i64 0), i32 %95)
  %97 = load i8*, i8** %2, align 8
  %98 = icmp ne i8* %97, null
  br i1 %98, label %113, label %99

99:                                               ; preds = %73
  %100 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %101 = load i32, i32* %10, align 4
  %102 = zext i32 %101 to i64
  %103 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %100, i64 %102
  %104 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %103, i32 0, i32 0
  %105 = load i8*, i8** %104, align 8
  %106 = call i8* @GetOwner(i8* %105)
  store i8* %106, i8** %14, align 8
  %107 = load i8*, i8** %14, align 8
  %108 = icmp ne i8* %107, null
  br i1 %108, label %109, label %112

109:                                              ; preds = %99
  %110 = load i8*, i8** %14, align 8
  %111 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.6, i64 0, i64 0), i8* %110)
  br label %112

112:                                              ; preds = %109, %99
  br label %113

113:                                              ; preds = %112, %73
  store i32 0, i32* %12, align 4
  %114 = load i32, i32* @LPTR, align 4
  %115 = call i64 @LocalAlloc(i32 %114, i32 8192)
  %116 = inttoptr i64 %115 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %116, %struct.TYPE_8__** %13, align 8
  %117 = load i32*, i32** %4, align 8
  %118 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %119 = call i64 @QueryServiceConfig(i32* %117, %struct.TYPE_8__* %118, i32 8192, i32* %12)
  %120 = icmp ne i64 %119, 0
  br i1 %120, label %121, label %126

121:                                              ; preds = %113
  %122 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %123 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %122, i32 0, i32 0
  %124 = load i8*, i8** %123, align 8
  %125 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.7, i64 0, i64 0), i8* %124)
  br label %129

126:                                              ; preds = %113
  %127 = call i32 (...) @GetLastError()
  %128 = call i32 @doFormatMessage(i32 %127)
  br label %129

129:                                              ; preds = %126, %121
  br label %130

130:                                              ; preds = %129, %57
  br label %131

131:                                              ; preds = %130
  %132 = load i32, i32* %10, align 4
  %133 = add i32 %132, 1
  store i32 %133, i32* %10, align 4
  br label %53

134:                                              ; preds = %53
  %135 = load i32, i32* %9, align 4
  %136 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.8, i64 0, i64 0), i32 %135)
  %137 = load i32, i32* %11, align 4
  %138 = icmp ugt i32 %137, 0
  br i1 %138, label %139, label %142

139:                                              ; preds = %134
  %140 = load i32, i32* %11, align 4
  %141 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.9, i64 0, i64 0), i32 %140)
  br label %144

142:                                              ; preds = %134
  %143 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.10, i64 0, i64 0))
  br label %144

144:                                              ; preds = %142, %139
  %145 = load i8*, i8** %2, align 8
  %146 = icmp ne i8* %145, null
  br i1 %146, label %147, label %151

147:                                              ; preds = %144
  %148 = load i32, i32* @RemoteHost, align 4
  %149 = load i32, i32* @TRUE, align 4
  %150 = call i32 @WNetCancelConnection2(i32 %148, i32* null, i32 %149)
  br label %151

151:                                              ; preds = %147, %144
  %152 = load i32*, i32** %3, align 8
  %153 = call i32 @CloseServiceHandle(i32* %152)
  %154 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %155 = call i32 @LocalFree(%struct.TYPE_9__* %154)
  %156 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32* @OpenSCManager(i8*, i32*, i32) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @doFormatMessage(i32) #1

declare dso_local i32 @GetLastError(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @LocalAlloc(i32, i32) #1

declare dso_local i32 @memset(%struct.TYPE_9__*, i8 signext, i32) #1

declare dso_local i64 @EnumServicesStatusEx(i32*, i32, i32, i32, i32, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32* @OpenService(i32*, i8*, i32) #1

declare dso_local i8* @GetOwner(i8*) #1

declare dso_local i64 @QueryServiceConfig(i32*, %struct.TYPE_8__*, i32, i32*) #1

declare dso_local i32 @WNetCancelConnection2(i32, i32*, i32) #1

declare dso_local i32 @CloseServiceHandle(i32*) #1

declare dso_local i32 @LocalFree(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
